[gd_scene load_steps=3 format=2]

[ext_resource path="res://Misc/ElementsDamage/FireDamage.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.97874, 2.65404 )

[node name="FireDamage" type="Node2D"]
position = Vector2( 15.111, -43.6565 )
script = ExtResource( 1 )

[node name="FireArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireArea"]
shape = SubResource( 1 )

[connection signal="body_entered" from="FireArea" to="." method="_on_FireArea_body_entered"]
[connection signal="body_exited" from="FireArea" to="." method="_on_FireArea_body_exited"]
